--- a/source/templates/default.twig
+++ b/source/templates/default.twig
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>{{ meta_title }}</title>
+	<title>{{ title ? title ~ ' - ' ~ meta_title : meta_title }}</title>
 	
 	<meta name="description" content="{{ meta_description }}">
 	<meta name="keywords" content="{{ meta_keywords }}">
@@ -29,47 +29,49 @@
 	<![endif]-->
 </head>
 <body>
-	<nav class="navbar navbar-custom navbar-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-					<i class="fa fa-bars"></i>
-				</button>
-				<a class="navbar-brand" href="{{ urlFor('home') }}">
-					<span><img src="{{ baseUrl() }}/img/greenhex-icon-brand.svg" alt="Brand" width="32" height="auto"></span> {{ meta_title }}
-				</a>
-			</div>
-
-			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-				<ul class="nav navbar-nav">
-					<li class="hidden active">
-						<a href="{{ urlFor('home') }}"></a>
-					</li>
-					<li class="">
-						<a class="page-scroll" href="{{ baseUrl() }}/about">About</a>
-					</li>
-					<li class="">
-						<a class="page-scroll" href="{{ baseUrl() }}/support">Support</a>
-					</li>
-					<li class="">
-						<a class="page-scroll" href="{{ baseUrl() }}/contact">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
-	<div class="container-fluid" id="content">
-		<div class="container">
-			<div class="row">
-				{% block content %}
+	<div id="header">
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header pull-left">
+					<a href="{{ urlFor('home') }}" class="navbar-brand"><img src="{{ baseUrl() }}/img/greenhex-icon-brand.svg" alt="Brand" width="32" height="32"></a>
+					<div class="navbar-header pull-left">
+						<ul class="nav navbar-nav">
+							<li><a href="{{ urlFor('home') }}" class="hidden-xs">Home</a></li>
+							<li><a href="{{ baseUrl() }}/profile">Profile</a></li>
+							<li><a href="{{ baseUrl() }}/messages">Messages</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="navbar-header pull-right">
+					<ul class="nav navbar-nav">
+						<li>
+							<form class="navbar-form navbar-right" role="search">
+								<div class="form-group">
+									<input type="text" class="form-control" data-action="grow" placeholder="Search" style="width: 180px;">
+								</div>
+							</form>
+						</li>
+						{% if auth %}
+							<li><a href="{{ baseUrl() }}/notifications"><span class="glyphicon glyphicon-bell" aria-hidden="true"></span></a></li>
+							<li><a href="#" class="profile-img hidden-xs"><img class="img-circle" src="{{ baseUrl() }}/img/uploads/avatar/fb92dea26b557917da1e65a6a3e5d467.png" width="35px" height="35px" style="margin-top:7px;"></a></li>
+						{% else %}
+							<li><a href="{{ baseUrl() }}/login">Log In</a></li>
+							<li><a href="{{ baseUrl() }}/signup">Sign Up</a></li>
+						{% endif %}
+					</ul>
+				</div>
 				
-				{% endblock %}
 			</div>
+		</nav>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			{% block content %}{% endblock %}
 		</div>
 	</div>
 
-	<footer class="text-center">
+	<!--<footer class="text-center">
 		<div class="footer-above">
 			<div class="container">
 				<div class="row">
@@ -107,14 +109,30 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer>.-->
 
-	<script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="{{ baseUrl() }}/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
 		$(function()
 		{
+			$('#userModal').on('shown.bs.modal', function ()
+			{
+				$('#userModal').focus();
+			});
+		});
 
+		$(document).on("focus", '[data-action="grow"]', function()
+		{
+			$(window).width() > 1e3 && $(this).animate({ width:300 })
+		});
+
+		$(document).on("blur", '[data-action="grow"]', function()
+		{
+			if ($(window).width() > 1e3)
+			{
+				$(this).animate( {width:180 })
+			}
 		});
 	</script>
 </body>
