--- a/source/templates/pages/feed.twig
+++ b/source/templates/pages/feed.twig
@@ -34,7 +34,7 @@
 			<div class="cover" style="background-image: url('{{ baseUrl() }}/img/iceland.jpg');"></div>
 			<div class="info">
 				<a href="#"><img class="img-circle" src="{{ baseUrl() }}/img/uploads/avatar/fb92dea26b557917da1e65a6a3e5d467.png"></a>
-				<h5><a href="#">Dave Gamache</a></h5>
+				<h5><a href="#">{{ session.user.name }}</a></h5>
 				<p>I wish i was a little bit taller, wish i was a baller, wish i had a girl…&nbsp;also.</p>
 				<ul>
 					<li><a href="#" data-toggle="modal" data-target="#userModal">Followers<h5>184</h5></a></li>
